<resources>
    <string name="action_share_app">Share the app</string>
    <string name="action_rate">Rate us</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About</string>

    <string name="app_chooser_title">Share via</string>
    <string name="share_all_caps">SHARE</string>
    <string name="rate_all_caps">RATE</string>

    <string name="no_network_connection_toast">No network connection found</string>
    <string name="share_app">Hey, check out WompWomp. It has really funny videos that you will love! Click to open the Play Store page: http://wompwomp.co/install</string>
    <string name="share_us_if_you_like">If you\'re enjoying our app we would really appreciate it if you could share the app with your friends!</string>
    <string name="rate_us_on_play_store">If you\'re enjoying our app please take a moment to rate us on the Play Store</string>
    <string name="version_title">Version</string>
    <string name="email_id">wompwompapp@gmail.com</string>
    <string name="our_contact">Contact Us</string>
    <string name="snappy_byline">Made with love in the USA</string>
    <string name="getting_ready_to_share">Getting ready to share…</string>
    <string name="cannot_share">We tried but were not able to share the image for some reason</string>
    <string name="launching_app_page">Launching wompwomp product page…</string>
    <string name="permissions_title">Allow wompwomp to write files</string>
    <string name="permissions_description">To share pictures and videos to other apps wompwomp needs permission to write files to your device.</string>
    <string name="next">NEXT</string>
    <string-array name="loading_messages">
        <item>Bringing you funny content from Antarctica…</item>
        <item>Loading best content from the Voyager mission</item>
        <item>Today\'s content is sponsored by emperor penguins…</item>
        <item>Loading lost content from Atlantis…</item>
        <item>Carrier pigeons bringing content to you…</item>
        <item>Delivery vehicle is reentering the earth\'s atmosphere…</item>
        <item>Waiting for popping to stop before opening the microwave…</item>
        <item>Waiting a few epochs before we take stuff out of the oven…</item>
        <item>Waiting on kittens to approve today\'s content…</item>
    </string-array>
    <string name="facebook_app_id" translatable="false">570524353097440</string>
    <string name="defaultAuthor">higgsboson</string>
    <string name="upgrade_to_new_version">Get the new version of the app</string>
    <string name="video_not_ready_for_sharing_yet">Video not yet ready for sharing. Please try again shortly.</string>
    <string name="likes">Likes</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="shares">Shares</string>
    <string name="views">Views</string>
    <string name="view">View</string>
    <string name="press_button_to_play_video">Press button to play video</string>
    <string name="press_button_to_share">Press button to share</string>
    <string name="press_button_to_like">press button to like</string>
    <string name="this_week_annotation">&#x1f525;Hot This Week</string>
    <string name="all_time_annotation">&#x1f3C6;Top All Time</string>
    <string name="today">Today</string>
    <string name="today_annotation">&#x1F4A5;Hot Today</string>
    <string name="best_of_this_month_annotation">&#x1F602;Best Of This Month</string>
    <string name="best_of_previous_month_annotation">&#x1F602;Best Of</string>
    <string name="gcm_defaultSenderId">124086447940</string>
    <string name="updated_daily">Updated Daily</string>
    <string name="check_back_again_tomorrow">Check</string>
    <string name="the_end">&#x1F6A7;The end\nCheck Back Again Tomorrow</string>
</resources>
