<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="co.wompwomp.sunshine.MainActivity">
    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        android:orderInCategory="49" app:showAsAction="never" />
    <item android:id="@+id/action_likes" android:title="@string/action_likes"
        android:orderInCategory="50" app:showAsAction="never" />
    <item android:id="@+id/action_share_app" android:title="@string/action_share_app"
        android:orderInCategory="51" app:showAsAction="never" />
    <item android:id="@+id/action_rate_us" android:title="@string/action_rate"
        android:orderInCategory="52" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="53" app:showAsAction="never" />
</menu>
