<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/contentView"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingTop="15dp"
    android:paddingBottom="15dp">

    <TextView
        android:id="@+id/content_header"
        android:gravity="center"
        android:layout_gravity="center"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:padding="15dp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusableInTouchMode="false"
        android:focusable="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_rectangle"
                android:layout_margin="4dp"
                android:id="@+id/annotation_layout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/annotation_icon"
                    android:paddingLeft="4dp"
                    android:paddingTop="4dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="4dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:id="@+id/annotation"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/abc_text_size_menu_material"
                    android:paddingLeft="0dp"
                    android:paddingTop="4dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="4dp" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical" android:layout_width="match_parent"
                android:id="@+id/shareCard"
                android:layout_height="match_parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white">
                    <co.wompwomp.sunshine.SquareImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="invisible"
                        android:src="@drawable/ic_play_circle_filled_gradient_black_48px"
                        android:id="@+id/playButton"
                        android:contentDescription="@string/press_button_to_play_video"/>

                    <ProgressBar
                        android:id="@+id/video_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="invisible"
                        android:indeterminateDrawable="@drawable/videoprogressbar" />

                    <SurfaceView android:id="@+id/surfaceView"
                        android:layout_width="1px"
                        android:layout_height="1px"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/textView"
                    android:gravity="center"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="15dp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">
                <TextView
                    android:id="@+id/createdon"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>
            </RelativeLayout>

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/timeandbuttons"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/white">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/favoritelayout" android:layout_margin="7dp">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/favorite_button"
                        android:padding="3dp"
                        android:clickable="true"
                        android:background="@android:color/white"
                        android:src="@drawable/ic_favorite_lightred_24dp"
                        android:contentDescription="@string/press_button_to_like" />

                    <TextView
                        android:id="@+id/likeText"
                        android:gravity="start"
                        style="@android:style/TextAppearance.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/like"/>
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/favoritelayout"
                    android:layout_toLeftOf="@id/favoritelayout"
                    android:id="@+id/sharelayout" android:layout_margin="7dp">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/share_button"
                        android:padding="3dp"
                        android:clickable="true"
                        android:background="@android:color/white"
                        android:src="@drawable/ic_share_black_24px"
                        android:contentDescription="@string/press_button_to_share"/>

                    <TextView
                        android:id="@+id/share"
                        android:gravity="start"
                        style="@android:style/TextAppearance.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/share"/>
                </LinearLayout>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/facebook_share_button"
                    android:padding="10dp"
                    android:clickable="true"
                    android:background="@android:color/white"
                    android:layout_toStartOf="@id/sharelayout"
                    android:layout_toLeftOf="@id/sharelayout"
                    android:src="@drawable/ic_1452302519_facebook"
                    android:contentDescription="@string/press_button_to_share"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/whatsapp_share_button"
                    android:padding="10dp"
                    android:clickable="true"
                    android:background="@android:color/white"
                    android:src="@drawable/ic_1447284844_whatsup_24dp"
                    android:layout_toStartOf="@id/facebook_share_button"
                    android:layout_toLeftOf="@id/facebook_share_button"
                    android:contentDescription="@string/press_button_to_share"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/likeCountLayout"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="7dp">
                    <TextView
                        android:id="@+id/numLikes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:padding="3dp"/>
                    <TextView
                        android:id="@+id/likesText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/likes"
                        android:padding="3dp"/>
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/likeCountLayout"
                    android:layout_toLeftOf="@id/likeCountLayout"
                    android:id="@+id/shareCountLayout"
                    android:layout_margin="7dp">
                    <TextView
                        android:id="@+id/numShares"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"/>

                    <TextView
                        android:id="@+id/shareCountText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shares"
                        android:padding="3dp"/>
                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/shareCountLayout"
                    android:layout_toLeftOf="@id/shareCountLayout"
                    android:id="@+id/viewCountlayout"
                    android:layout_margin="7dp">
                    <TextView
                        android:id="@+id/numViews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"/>
                    <TextView
                        android:id="@+id/viewsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/views"
                        android:padding="3dp"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/content_footer"
        android:gravity="center"
        android:layout_gravity="center"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textStyle="bold" />
</LinearLayout>